--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
+  },
+  "dependencies": {
+    "posthtml-include": "^1.7.1"
   }
 }
