--- a/package.json
+++ b/package.json
@@ -5,6 +5,15 @@
   "keywords": "",
   "license": "",
   "author": "",
+  "targets": {
+    "default": {
+      "context": "node"
+    }
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11"
+  ],
   "scripts": {
     "build": "parcel build index.html",
     "dev": "parcel index.html --open",
@@ -12,7 +21,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.5",
+    "@parcel/packager-raw-url": "^2.0.0-nightly.2312",
+    "@parcel/transformer-sass": "^2.0.0-nightly.690",
+    "@parcel/transformer-webmanifest": "^2.0.0-nightly.2312",
+    "parcel": "^2.0.0-beta.3.1",
     "sass": "^1.34.0"
   },
   "dependencies": {
